Fix spacing

--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ html, body {
 
 .titleDiv{
     font-family: 'Open Sans', sans-serif;
-    font-weight: 800;
+    font-weight: 700;
     font-size: large;
 }
 
@@ -41,6 +41,7 @@ html, body {
 
 #footer{
     background-color: var(--dark-brown);
+    font-size: small;
 }
 
 .fa-brands{
@@ -52,14 +53,18 @@ html, body {
  }
 
 .projImg{
-    max-width: 300px;
-    max-height: 200px;
+    max-width: 250px;
+    max-height: 150px;
     margin-bottom: 1rem;
 }
 
+.projTitle{
+    font-size: large;
+}
+
 iframe{
-    max-width: 300px;
-    max-height: 200px;
+    width: 300px;
+    height: 200px;
     margin-bottom: 1rem;
 }
 
